@@ -6,17 +6,21 @@ import org.springframework.stereotype.Service;
 import uk.gov.hmcts.darts.common.component.validation.Validator;
 import uk.gov.hmcts.darts.common.entity.SecurityGroupEntity;
 import uk.gov.hmcts.darts.common.enums.SecurityRoleEnum;
+import uk.gov.hmcts.darts.common.exception.DartsApiException;
 import uk.gov.hmcts.darts.common.model.SecurityGroupModel;
 import uk.gov.hmcts.darts.common.repository.SecurityGroupRepository;
 import uk.gov.hmcts.darts.common.repository.SecurityRoleRepository;
 import uk.gov.hmcts.darts.usermanagement.mapper.impl.SecurityGroupCourthouseMapper;
 import uk.gov.hmcts.darts.usermanagement.mapper.impl.SecurityGroupMapper;
+import uk.gov.hmcts.darts.usermanagement.mapper.impl.SecurityGroupWithIdAndRoleAndUsersMapper;
 import uk.gov.hmcts.darts.usermanagement.model.SecurityGroup;
 import uk.gov.hmcts.darts.usermanagement.model.SecurityGroupWithIdAndRole;
+import uk.gov.hmcts.darts.usermanagement.model.SecurityGroupWithIdAndRoleAndUsers;
 import uk.gov.hmcts.darts.usermanagement.service.SecurityGroupService;
 
 import java.util.List;
-import java.util.stream.Collectors;
+
+import static uk.gov.hmcts.darts.usermanagement.exception.UserManagementError.SECURITY_GROUP_NOT_FOUND;
 
 @Service
 @RequiredArgsConstructor
@@ -26,8 +30,16 @@ public class SecurityGroupServiceImpl implements SecurityGroupService {
     private final SecurityRoleRepository securityRoleRepository;
     private final SecurityGroupMapper securityGroupMapper;
     private final SecurityGroupCourthouseMapper securityGroupCourthouseMapper;
-
+    private final SecurityGroupWithIdAndRoleAndUsersMapper securityGroupWithIdAndRoleAndUsersMapper;
     private final Validator<SecurityGroupModel> securityGroupCreationValidation;
+
+    @Override
+    public SecurityGroupWithIdAndRoleAndUsers getSecurityGroup(Integer securityGroupId) {
+        SecurityGroupEntity securityGroup = securityGroupRepository.findById(securityGroupId)
+            .orElseThrow(() -> new DartsApiException(SECURITY_GROUP_NOT_FOUND));
+
+        return securityGroupWithIdAndRoleAndUsersMapper.mapToSecurityGroupWithIdAndRoleAndUsers(securityGroup);
+    }
 
     @Override
     @Transactional
@@ -58,16 +70,16 @@ public class SecurityGroupServiceImpl implements SecurityGroupService {
         return securityGroupRepository.saveAndFlush(securityGroupEntity);
     }
 
-    public List<SecurityGroupWithIdAndRole> getSecurityGroups(List<Integer> roleIds, Integer courthouseId) {
+    public List<SecurityGroupWithIdAndRole> getSecurityGroups(List<Integer> roleIds, Integer courthouseId, Integer userId, Boolean singletonUser) {
         List<SecurityGroupEntity> securityGroupEntities = securityGroupRepository.findAll();
 
         securityGroupEntities = filterSecurityGroupEntitiesByRoleIds(securityGroupEntities, roleIds);
         securityGroupEntities = filterSecurityGroupEntitiesByCourthouseId(securityGroupEntities, courthouseId);
+        securityGroupEntities = filterSecurityGroupEntitiesByUserId(securityGroupEntities, userId);
+        securityGroupEntities = filterSecurityGroupEntitiesBySingleUser(securityGroupEntities, singletonUser);
 
-        List<SecurityGroupWithIdAndRole> securityGroupWithIdAndRoles = securityGroupEntities.stream()
+        return securityGroupEntities.stream()
             .map(securityGroupCourthouseMapper::mapToSecurityGroupWithIdAndRoleWithCourthouse).toList();
-
-        return securityGroupWithIdAndRoles;
     }
 
     private List<SecurityGroupEntity> filterSecurityGroupEntitiesByRoleIds(
@@ -76,7 +88,7 @@ public class SecurityGroupServiceImpl implements SecurityGroupService {
         if (roleIds != null) {
             return securityGroupEntities.stream()
                 .filter(securityGroup -> roleIds.contains(securityGroup.getSecurityRoleEntity().getId()))
-                .collect(Collectors.toList());
+                .toList();
         }
         return securityGroupEntities;
     }
@@ -88,7 +100,31 @@ public class SecurityGroupServiceImpl implements SecurityGroupService {
             return securityGroupEntities.stream()
                 .filter(securityGroupEntity -> securityGroupEntity.getCourthouseEntities().stream()
                     .anyMatch(courthouseEntity -> courthouseEntity.getId().equals(courthouseId)))
-                .collect(Collectors.toList());
+                .toList();
+        }
+        return securityGroupEntities;
+    }
+
+    private List<SecurityGroupEntity> filterSecurityGroupEntitiesByUserId(
+        List<SecurityGroupEntity> securityGroupEntities, Integer userId) {
+
+        if (userId != null) {
+            return securityGroupEntities.stream()
+                .filter(securityGroupEntity -> securityGroupEntity.getUsers().stream()
+                    .anyMatch(userAccountEntity -> userAccountEntity.getId().equals(userId)))
+                .toList();
+        }
+        return securityGroupEntities;
+    }
+
+    private List<SecurityGroupEntity> filterSecurityGroupEntitiesBySingleUser(
+        List<SecurityGroupEntity> securityGroupEntities, Boolean singletonUser) {
+
+        if (singletonUser != null) {
+            return securityGroupEntities.stream()
+                .filter(securityGroupEntity -> ((!securityGroupEntity.getUsers().isEmpty())
+                    && (securityGroupEntity.getUsers().size() == 1) == singletonUser))
+                .toList();
         }
         return securityGroupEntities;
     }
